feat(promotion): update swagger
