# src/module/promotion/presentation/router.ts
@@ -7,8 +7,8 @@ export function createPromotionRouter(controller: PromotionController): Router {
     const router = Router();
     router.get('/admin/promotions', authenticate,  controller.getAllPromotion.bind(controller));
     router.post('/admin/promotions', authenticate, validateRequest({ body: createPromotionSchema }), controller.createPromotion.bind(controller));
-    router.put('/admin/promotions/:id', authenticate, validateRequest({ body: updatePromotionSchema, params: promotionIdParamSchema }), controller.updatePromotion.bind(controller));
-    router.delete('/admin/promotions/:id', authenticate, validateRequest({ params: promotionIdParamSchema }), controller.deletePromotion.bind(controller));
-    router.delete('/admin/promotions/:id/variant/:variantId', authenticate, validateRequest({ params: removeDetailParamSchema }), controller.deletePromotionDetail.bind(controller));
+    router.put('/admin/promotions/:promotionId', authenticate, validateRequest({ body: updatePromotionSchema, params: promotionIdParamSchema }), controller.updatePromotion.bind(controller));
+    router.delete('/admin/promotions/:promotionId', authenticate, validateRequest({ params: promotionIdParamSchema }), controller.deletePromotion.bind(controller));
+    router.delete('/admin/promotions/:promotionId/variant/:variantId', authenticate, validateRequest({ params: removeDetailParamSchema }), controller.deletePromotionDetail.bind(controller));
     return router;
 }
